# anki-helpers

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  CLAUDE.md  README.md  justfile  plan.md  pyproject.toml  todo.md  verification.md
.claude/: settings.json
.github/workflows/: ci.yml
docs/: anki-connect-api.md  manual-test.md
e2e-tests/: __init__.py  test_cli_e2e.py  test_sync_e2e.py
fixtures/: sample_seed.json
implementation/: generate-cards-for-words.md  generate-examples-for-word.md
integration-tests/: __init__.py  test_cli.py  test_sync_commands.py
openspec/changes/add-sqlite-sync/: design.md  proposal.md  tasks.md
openspec/changes/add-sqlite-sync/specs/anki-sync/: spec.md
openspec/changes/add-sqlite-sync/specs/sqlite-storage/: spec.md
openspec/changes/archive/2026-03-31-add-superpowers/: design.md  proposal.md  tasks.md
openspec/specs/superpowers-workflow/: spec.md
src/: __init__.py
src/anki_helpers/: __init__.py  anki_connect.py  cli.py  data_transform.py  sqlite_storage.py
src/anki_helpers/mock_server/: __init__.py  __main__.py  handlers.py  query.py  server.py  state.py
src/anki_helpers/prompts/: __init__.py  examples_for_red_cards.py  examples_for_word.py
tests/: __init__.py  cli_test.py  conftest.py  mock_server_test.py  test_anki_connect.py  test_cli.py  test_cli_utils.py  test_data_transform.py  test_prompts.py  test_sqlite_storage.py  test_sync_logic.py
