[tool.poetry]
name = "anki-helpers"
version = "0.1.0"
description = "A CLI tool to help with Anki flashcards"
authors = ["davojta"]
readme = "README.md"

[tool.poetry.scripts]
anki-helpers = "anki_helpers.cli:cli"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.8"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
types-requests = "^2.32.0.20250328"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 100  # or whatever length you prefer
